# rastfetch

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: default.json
assets/ansi/: palette.ansi.txt
assets/logo/ascii/: bazzite_full.txt  bazzite_logo.txt  debian.txt  endeavouros.txt  linuxmint.txt  macos.txt  zorin.txt
doc/: colors.md  default.json  modules.md
src/: main.rs  modules.rs  os_map.rs
