[package]
name = "rastfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo ={ version = "0.35.1" }
phf = { version = "0.11", features = ["macros"] }
include_dir = { version = "0.7.4" }